feat:  addressing review comments
Contributes to: event-integration/eventstreams-planning/12766
KIP Link:  https://cwiki.apache.org/confluence/display/KAFKA/KIP-1054%3A+Support+external+schemas+in+JSONConverte

Signed-off-by: Priyanka K U <priyanka.k.u@ibm.com>